# munimuni

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
cmake/common/: AddSwift.cmake  bootstrap.cmake  buildspec_common.cmake  helpers_common.cmake
cmake/windows/: buildspec.cmake  compilerconfig.cmake  helpers.cmake
data/locale/: en-US.ini
include/: module.modulemap  swift-helper.h  swift-obs.h
src/: BridgeHelper.swift  ColorSources.swift  ObjectManager.swift  hello.swift  plugin-main.cpp  swift-hepler.cpp  swift-log-hepler.cpp
src/Extensions/: OBSSourceInfo+Extension.swift  String+Extension.swift
